# pysubtools2

./: out.txt  pyproject.toml  pyrightconfig.json
pysubtools2/: utils.py
pysubtools2/exporters/: html_injection.py  microdvd.py  subrip.py
pysubtools2/parsers/: html_parsing.py  microdvd.py  ssa_control_code_parsing.py  subrip.py  webvtt.py
pysubtools2/subtitle/: color.py  formatting.py  subtitle.py  time.py
tests/: microdvd_tests.py  subrip_tests.py
tests/data/srt/: autodetect_charset.json  autodetect_charset_gt.srt  bug_testing_1.json  bug_testing_1.srt  bug_testing_1_gt.srt  bug_testing_2.json  bug_testing_2.srt  bug_testing_2_gt.srt  capability_testing.json  capability_testing_gt.srt  commas_tester.json  commas_tester.srt  commas_tester_gt.srt  encoding_detection.json  encoding_detection_gt.srt  encoding_error.json  encoding_error_gt.srt  files.json  high_mem.json  high_mem_gt.srt  lookup_error.json  lookup_error_gt.srt
tests/data/sub/: capability_testing_25fps.json  capability_testing_25fps.sub  capability_testing_25fps_gt.sub  default.json  default.sub  default_gt.sub  files.json  missing_times.json  missing_times.sub  missing_times_gt.sub  test_1.json  test_1.sub  test_1_gt.sub  test_2.json  test_2_gt.sub  test_4.json  test_4_gt.sub  test_5.json  test_5_gt.json  test_5_gt.sub  test_6.json  test_6_gt.sub
tests/data/vtt/: characters.vtt  cue_identifiers.vtt  default_colors.vtt  positions.vtt  test_3.vtt
