[project]
name = "PySubTools2"
version = "0.1.0"
description = "A set of parsers and exports for subtitles in various formats"
authors = []
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "charset-normalizer>=3.4.4"
]

[dependency-groups]
dev = ["black", "ruff", "mypy", "coverage", "pyinstrument"]
